--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,5 +30,5 @@
   <%= @user.encrypted_token %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'Edit', edit_user_registration_path(@user) %> |
 <%= link_to 'Back', users_path %>
