--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,44 @@
-<h1>Editing Event</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <br><br><br>
+      <%= form_for @event do |f| %>
+        <h1 class="h3 mb-3 font-weight-normal text-center">Modification d'un évenement</h1>
+        <div class="form-group">
+          <%= f.label :title, "Titre de l'évenement" %><br />
+          <%= f.text_field :title, autocomplete: "#{@event.title}", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :description, "description de l'evenement" %><br />
+          <%= f.text_area :description, autocomplete: "#{@event.description}", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :start_date, "date de debut" %><br />
+          <%= f.datetime_select :start_date, value: @event.start_date, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :duration, "durée en minutes (pas de 5 minutes)" %><br />
+          <%= f.number_field :duration, within: 5..120, value: @event.duration, step: 5, id: "textInput", oninput: "updateRangeInput(this.value)"%>
+        </div>
+        <div class="form-group">
+          <%= f.label :price, "Prix" %><br />
+          <%= f.number_field :price, value: @event.price, class: "form-control" %>
+        </div>
 
-<%= render 'form', event: @event %>
-
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+        <div class="form-group">
+          <%= f.label :location, "" %><br />
+          <%= f.text_field :location, autocomplete: "#{@event.location}", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.hidden_field :admin_id, value: @event.admin_id%>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Modifier l'évenement", class:"btn btn-success btn-lg" %>
+        </div>
+      <% end %>
+      <div class="btn-group" role="group">
+        <%= link_to "Back", :back , class: "btn btn-primary btn-sm"%>
+      </div>
+    </div>
+  </div>
+</div>
