--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,37 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Start date</th>
-      <th>Duration</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-4">eventbrite</h1>
+    <p class="lead">Affichage de tous les events</p>
+    <p>Eventbrite te permet d'organiser ou de participer à des evenements.</p>
+    <p><%= link_to 'Créer ton Event !', new_event_path, class: "btn btn-primary btn-lg"%></p>
+  </div>
+</div>
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-3">
     <% @events.each do |event| %>
-      <tr>
-        <td><%= event.start_date %></td>
-        <td><%= event.duration %></td>
-        <td><%= event.title %></td>
-        <td><%= event.description %></td>
-        <td><%= event.price %></td>
-        <td><%= event.location %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Event', new_event_path %>
+      <div class="col mb-4">
+        <div class="card">
+        <div class="card-header"><%=event.title%></div>
+          <div class="card-body">
+            <h5 class="card-title">le <%=event.start_date%> à <%=event.location%></h5>
+            <p class="card-text"><%=event.description%> <br /> Pendant <%= event.duration %> minutes</p>
+          </div>
+          <div class="card-footer"><%= link_to "GO => #{event.price}", event_path(event.id), class: "btn btn-primary btn-lg"%></div>
+        </div>
+      </div>
+    <%end%>
+</div>
