--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,45 @@
-<h1>New Event</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <br><br><br>
+      <%= form_for @event do |f| %>
+        <h1 class="h3 mb-3 font-weight-normal text-center">Création d'un évenement</h1>
+        <div class="form-group">
+          <%= f.label :title, "Titre de l'évenement" %><br />
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :description, "description de l'evenement" %><br />
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :start_date, "date de debut" %><br />
+          <%= f.datetime_select :start_date, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :duration, "durée en minutes (pas de 5 minutes)" %><br />
+          <%= f.number_field :duration, within: 5..120, value: 60, step: 5, id: "textInput", oninput: "updateRangeInput(this.value)"%>
+        </div>
+        <div class="form-group">
+          <%= f.label :price, "Prix" %><br />
+          <%= f.number_field :price, class: "form-control" %>
+        </div>
 
-<%= render 'form', event: @event %>
+        <div class="form-group">
+          <%= f.label :location, "" %><br />
+          <%= f.text_field :location, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.hidden_field :admin_id, value: current_user.id%>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Créer un évenement", class:"btn btn-success btn-lg" %>
+        </div>
+      <% end %>
+      <div class="btn-group" role="group">
+        <%= link_to "Back", :back , class: "btn btn-primary btn-sm"%>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Back', events_path %>
