--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,34 +1,27 @@
+
+<main class="container">
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Start date:</strong>
-  <%= @event.start_date %>
-</p>
+<h1 class="text-center"><%= @event.title %></h1>
 
-<p>
-  <strong>Duration:</strong>
-  <%= @event.duration %>
-</p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @event.title %>
-</p>
+<div class="card my-5">
+  <div class="card-header">
+      <strong>Email de l'organisateur : </strong><%= @admin.email %>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><strong>Début : </strong><%= @event.start_date.strftime('%d/%m/%Y à %H:%M') %></li>
+    <li class="list-group-item"><strong>Fin : </strong><%= @event.end_date.strftime('%d/%m/%Y à %H:%M') %></li>
+    <li class="list-group-item"><strong>Prix : </strong><%= @event.price %> €</li>
+    <li class="list-group-item"><strong>Où : </strong><%= @event.location %></li>
+    <li class="list-group-item"><strong>Description : </strong><%= @event.description %></li>
+  </ul>
+</div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @event.description %>
-</p>
+<% if user_signed_in? && current_user.id == @admin.id %>
+<%= link_to 'Editer', edit_event_path(@event), class:"btn btn-success" %> 
+<%= link_to 'Supprimer', @event, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+<% end %>
 
-<p>
-  <strong>Price:</strong>
-  <%= @event.price %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @event.location %>
-</p>
-
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to '« Retour Accueil', events_path, class:"btn btn-primary" %>
+</main>
