--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
+<main class="container">
 <p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @user.email %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @user.description %>
+</p>
 
 <p>
   <strong>First name:</strong>
@@ -10,25 +21,29 @@
   <%= @user.last_name %>
 </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @user.description %>
-</p>
+<%= link_to 'Editer le profil', edit_user_registration_path, class:"btn btn-success" %> |
+<%= link_to '« Retour Accueil', root_path, class:"btn btn-primary" %>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+<% Event.all.each do |event| %>
+  <% if @user.id == event.admin.id %>
+    <div class="card my-3">
+      <div class="card-header">
+        <h4><%= event.title %></h4>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">le <%= event.start_date %> à <%= event.location %></h5>
+        <p class="card-text"><%= event.description %></p>
+        <%= link_to 'Show', event, class:"btn btn-primary" %> 
+        <% if user_signed_in? && current_user.id == event.admin.id %>
+          <%= link_to 'Edit', edit_event_path(event), class:"btn btn-success" %> 
+          <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+        <% end %>
+      </div>
+      <div class="card-footer">
+        Prix : <%= event.price %> € // Durée : <%= event.duration %> min
+      </div>
+    </div>
+  <% end %>
+<% end %>
 
-<p>
-  <strong>Encrypted password:</strong>
-  <%= @user.encrypted_password %>
-</p>
-
-<p>
-  <strong>Encrypted token:</strong>
-  <%= @user.encrypted_token %>
-</p>
-
-<%= link_to 'Edit', edit_user_registration_path(@user) %> |
-<%= link_to 'Back', users_path %>
+</main>
